登录页的界面暂时搞定

--- a/src/components/Phone/Phone.scss
+++ b/src/components/Phone/Phone.scss
@@ -31,10 +31,10 @@ $bottomHeight: 35px;
 }
 
 .inputphone {
-    max-width: 200px;
+    max-width: 240px;
     border: none;
     padding: 0;
-    margin-left: 20px;
+    // margin-left: 20px;
     line-height: $bottomHeight;
     font-size: 24px;
     outline: none;
