--- a/src/containers/Register/component/StepTwo/StepTwo.scss
+++ b/src/containers/Register/component/StepTwo/StepTwo.scss
@@ -1,3 +1,15 @@
 .steptwo {
     margin: 0 5%;
 }
+
+.nextstep {
+    & > div:first-child {
+        display: inline-block;
+        width: 60%;
+    }
+    & > div:last-child {
+        display: inline-block;
+        width: 35%;
+        margin-left: 5%;
+    }
+}
