--- a/src/containers/Login/container/Login.scss
+++ b/src/containers/Login/container/Login.scss
@@ -5,7 +5,7 @@
     right: 0;
     bottom: 0;
 
-    background-image: url('/assets/bg.jpg');
+    background-image: url('/assets/login_background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
