添加了若干element，但有待完善

--- a/src/containers/HotDetail/container/HotDetail.scss
+++ b/src/containers/HotDetail/container/HotDetail.scss
@@ -2,6 +2,11 @@ $detailBottomMargin: 75px;
 .detail {
     margin-bottom: $detailBottomMargin;
 }
+
+.content {
+    margin: 0 20px;
+}
+
 .container {
     margin: 0 20px;
 }
