--- a/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
+++ b/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
@@ -15,6 +15,107 @@
     background-color: white;
 }
 
+.header {
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    border-bottom: 1px solid #DEDEDE;
+
+    & > span {
+        display: inline-block;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        width: 80px;
+
+        font-size: 16px;
+        text-align: center;
+        color: black;
+    }
+}
+
+.cancel {
+    display: inline-block;
+    float: right;
+    margin-right: 20px;
+
+    & > span {
+        font-size: 16px;
+        color: #71767A;
+    }
+    & > img {
+        width: 23px;
+        margin-left: 10px;
+        margin-top: -4px;
+        vertical-align: middle;
+    }
+}
+
+.tip {
+    margin-bottom: 25px;
+    font-size: 20px;
+    color: #71767A;
+}
+
+.middle {
+    margin: 0 20px;
+    padding: 20px 0;
+    border-bottom: 1px solid #DEDEDE;
+}
+
+$ticketCountPartHeight: 40px;
+.ticketCount {
+    height: $ticketCountPartHeight;
+    line-height: $ticketCountPartHeight;
+
+    & > div {
+        display: inline-block;
+        font-size: 18px;
+        color: black;
+    }
+}
+
+.ticketCountChoice {
+    display: inline-block;
+    float: right;
+    line-height: $ticketCountPartHeight;
+
+    & > span {
+        display: inline-block;
+        width: 80px;
+        text-align: center;
+        font-size: 24px;
+        color: #E62A10;
+    }
+    & > div:first-child {
+        margin-right: 40px;
+        @media (max-width: 370px) {
+            margin-right: 20px;
+        }
+    }
+    & > div:last-child {
+        margin-left: 40px;
+        @media (max-width: 370px) {
+            margin-left: 20px;
+        }
+    }
+}
+
+.ticketItem {
+    display: inline-block;
+    & > img {
+        margin-top: -2px;
+        vertical-align: top;
+        width: 40px;
+    }
+}
+
+.footer {
+    margin: 0 20px;
+    padding: 20px 0;
+}
+
 .toolBar {
     position: absolute;
     left: 0;
