立即购买界面因缺少占位图而暂时搁置

--- a/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
+++ b/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
@@ -86,6 +86,7 @@ $ticketCountPartHeight: 40px;
         width: 80px;
         text-align: center;
         font-size: 24px;
+        letter-spacing: 3px;
         color: #E62A10;
     }
     & > div:first-child {
