--- a/src/containers/Register/container/Register.scss
+++ b/src/containers/Register/container/Register.scss
@@ -6,10 +6,14 @@
     position: relative;
 }
 
-$registerNavHeight: 44px;
+// $registerNavHeight: 44px;
+// .nav {
+//     height: $registerNavHeight;
+//     line-height: $registerNavHeight;
+//     font-size: 20px;
+//     color: white;
+// }
+
 .nav {
-    height: $registerNavHeight;
-    line-height: $registerNavHeight;
-    font-size: 20px;
-    color: white;
+    margin: 0 20px;
 }
