--- a/src/containers/HotDetail/component/Navbar/Navbar.scss
+++ b/src/containers/HotDetail/component/Navbar/Navbar.scss
@@ -1,9 +1,11 @@
 $narbarHeight: 44px;
 .navbar {
-    position: relative;
+    position: fixed;
+    top: 0;
     height: $narbarHeight;
     width: 100%;
     background-color: #1C2123;
+    z-index: 123;
 
     & > div:last-child {
         float: right;
