--- a/src/components/Phone/Phone.scss
+++ b/src/components/Phone/Phone.scss
@@ -40,6 +40,10 @@ $bottomHeight: 35px;
     outline: none;
     color: white;
     background-color: transparent;
+
+    @media (max-width: 370px) {
+        max-width: 180px;
+    }
 }
 
 .checkd {
