--- a/src/containers/Shoppingcart/container/Shoppingcart.scss
+++ b/src/containers/Shoppingcart/container/Shoppingcart.scss
@@ -1,3 +1,5 @@
+$shoppingcartMarginBottom: 75px;
 .shoppingcart {
-    margin: 5% 5%;
+    margin: 0 5%;
+    margin-bottom: $shoppingcartMarginBottom;
 }
