--- a/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
+++ b/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
@@ -5,14 +5,23 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .4);
+    z-index: 999;
+}
+
+.backgroundTransition {
+    transition: background-color .1s linear;
 }
 
 .ticket {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 55px;
+    bottom: -410px;
     background-color: white;
+}
+
+.ticketTransition {
+    transition: bottom .5s ease-in-out;
 }
 
 .header {
@@ -133,10 +142,11 @@ $ticketCountPartHeight: 40px;
 }
 
 .toolBar {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    // position: absolute;
+    // left: 0;
+    // right: 0;
+    // bottom: 0;
+    width: 100%;
     height: 55px;
     white-space: nowrap;
     padding: 12px 20px;
