调整了购物车的背景颜色

--- a/src/containers/Shoppingcart/container/Shoppingcart.scss
+++ b/src/containers/Shoppingcart/container/Shoppingcart.scss
@@ -1,5 +1,6 @@
 $shoppingcartMarginBottom: 75px;
 .shoppingcart {
-    margin: 0 5%;
+    padding: 0 5%;
     margin-bottom: $shoppingcartMarginBottom;
+    background-color: #f5f6f9;
 }
