--- a/src/containers/Register/component/StepFour/StepFour.scss
+++ b/src/containers/Register/component/StepFour/StepFour.scss
@@ -3,13 +3,8 @@
 }
 
 .nextstep {
-    & > div:first-child {
+    & > div {
         display: inline-block;
-        width: 60%;
-    }
-    & > div:last-child {
-        display: inline-block;
-        width: 35%;
-        margin-left: 5%;
+        width: 100%;
     }
 }
