--- a/src/containers/Tickets/component/TicketTool/TicketTool.scss
+++ b/src/containers/Tickets/component/TicketTool/TicketTool.scss
@@ -23,5 +23,6 @@ $imgHeight: 30px;
     line-height: $toolHeight;
     vertical-align: top;
     font-size: 18px;
+    font-family: PingFangSC-Regular;
     color: white;
 }
