--- a/src/containers/Tickets/container/Tickets.scss
+++ b/src/containers/Tickets/container/Tickets.scss
@@ -1,4 +1,5 @@
-
+$ticketBorderBottom: 75px;
 .ticketWrap {
-    padding: 0 20px;   
+    padding: 0 20px;
+    border-bottom: $ticketBorderBottom solid transparent;   
 }
