--- a/src/containers/Tickets/component/TicketSearchBar/TicketSearchBar.scss
+++ b/src/containers/Tickets/component/TicketSearchBar/TicketSearchBar.scss
@@ -1,7 +1,29 @@
 $searchBarHeight: 44px;
 .searchBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: $searchBarHeight;
     padding: 8px 20px;
     box-sizing: padding-box;
     background-color: #1C2123;
+}
+
+.back {
+    display: inline-block;
+    width: 8%;
+    height: 100%;
+    padding: 6px 0;
+    & > img {
+        display: block;
+        height: 16px;
+        vertical-align: top;
+    }
+}
+
+.search {
+    display: inline-block;
+    width: 92%;
+    height: 100%;
 }
