添加了搜索票务的界面

--- a/src/containers/Tickets/component/TicketSearchBar/TicketSearchBar.scss
+++ b/src/containers/Tickets/component/TicketSearchBar/TicketSearchBar.scss
@@ -8,6 +8,7 @@ $searchBarHeight: 44px;
     padding: 8px 20px;
     box-sizing: padding-box;
     background-color: #1C2123;
+    z-index: 999;
 }
 
 .back {
