--- a/src/containers/Tickets/container/SearchTicket.scss
+++ b/src/containers/Tickets/container/SearchTicket.scss
@@ -1,6 +1,46 @@
 .searchTicket {
     background-color: #FFFFFF;
 }
+
+.contentWrap {
+    margin-top: 44px;
+}
+
+.noSearchResult {
+    margin-top: 144px;
+}
+
+.searchImg {
+    width: 100%;
+    height: 93px;
+    text-align: center;
+    & > img {
+        height: 100%;
+        vertical-align: top;
+    }
+}
+
+.noSearchDescription {
+    margin-top: 35px;
+    text-align: center;
+
+    & > span:first-child {
+        display: inline-block;
+        width: 100%;
+        font-family: PingFangSC-Semibold;
+        font-size: 16px;
+        color: #393939;
+    }
+
+    & > span:last-child {
+        display: inline-block;
+        margin-top: 20px;
+        font-family: PingFangSC-Regular;
+        font-size: 14px;
+        color: #D6D6D6;
+    }
+}
+
 .items {
 
 }
