调整了服务器端不能获取完数据再返回的问题

--- a/src/containers/HotDetail/container/HotDetail.scss
+++ b/src/containers/HotDetail/container/HotDetail.scss
@@ -99,6 +99,10 @@ $carouselHeight: 200px;
     color: black;
 }
 
+.textOfWhiteSpaceDeal {
+    white-space: pre-line;
+}
+
 .tip {
     margin: 20px 0;
     font-size: 18px;
