--- a/src/containers/Login/container/WeChatLoginTransition.scss
+++ b/src/containers/Login/container/WeChatLoginTransition.scss
@@ -1,3 +1,19 @@
 .wechat {
-    
+
+}
+
+.description {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+
+    width: 100%;
+    height: 44px;
+    line-height: 44px;
+    font-size: 14px;
+    text-align: center;
 }
