添加了隐私声明

--- a/src/components/Elements/Element.scss
+++ b/src/components/Elements/Element.scss
@@ -11,6 +11,7 @@ $elementVerMargin: 14px;
     font-family: PingFangSC-Regular;
     font-size: 16px;
     color: black;
+    white-space: pre-line;
 }
 
 .image {
