正在完善添加联系人

--- a/src/components/Phone/Phone.scss
+++ b/src/components/Phone/Phone.scss
@@ -7,6 +7,11 @@ $phoneHeight: 80px;
     color: white;
 }
 
+.phoneDarkTheme {
+    color: black;
+    border-bottom: 1px solid #EEEFF2;
+}
+
 .title {
     padding: 0;
     font-size: 16px;
