调整了添加联系人页面

--- a/src/components/Phone/Phone.scss
+++ b/src/components/Phone/Phone.scss
@@ -46,6 +46,10 @@ $bottomHeight: 35px;
     color: white;
     background-color: transparent;
 }
+.inputphoneDarkTheme {
+    font-family: PingFangSC-Semibold;
+    color: black;
+}
 
 .checkd {
     position: relative;
