调整了补充信息页的nav的层级

--- a/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
+++ b/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
@@ -8,6 +8,7 @@ $navHeight: 44px;
     height: $navHeight;
     text-align: center;
     background-color: #1C2123;
+    z-index: 999;
 }
 
 .navTitle {
