--- a/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
+++ b/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
@@ -1,26 +1,25 @@
 
-$navHeight: 44px;
-.nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: $navHeight;
-    text-align: center;
-    background-color: #1C2123;
-    z-index: 999;
-}
-
-.navTitle {
-    display: inline-block;
-    line-height: $navHeight;
-    font-size: 16px;
-    color: white;
-}
+// $navHeight: 44px;
+// .nav {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     height: $navHeight;
+//     text-align: center;
+//     background-color: #1C2123;
+//     z-index: 999;
+// }
+//
+// .navTitle {
+//     display: inline-block;
+//     line-height: $navHeight;
+//     font-size: 16px;
+//     color: white;
+// }
 
 .pageContent {
-    padding-top: 44px;
-    margin-bottom: 65px;
+    padding-bottom: 65px;
 }
 
 // 票面信息
