调整了购买停车券

--- a/src/containers/HotDetail/component/BuyParkingCoupon/BuyParkingCoupon.scss
+++ b/src/containers/HotDetail/component/BuyParkingCoupon/BuyParkingCoupon.scss
@@ -36,6 +36,7 @@
         font-family: PingFangSC-Semibold;
         line-height: 40px;
         font-size: 28px;
+        outline: none;
         color: #E62A10;
     }
 }
