--- a/src/containers/HotDetail/component/BuyParkingCoupon/BuyParkingCoupon.scss
+++ b/src/containers/HotDetail/component/BuyParkingCoupon/BuyParkingCoupon.scss
@@ -32,7 +32,8 @@
     & > input {
         width: 100%;
         height: 40px;
-        outline-style: none;
+        border: none;
+        outline: none;
         font-family: PingFangSC-Semibold;
         line-height: 40px;
         font-size: 28px;
