--- a/src/containers/Tickets/container/BuyTicket.scss
+++ b/src/containers/Tickets/container/BuyTicket.scss
@@ -2,3 +2,18 @@ $buyTicketTopMargin: 44px;
 .buyTicket {
     padding: $buyTicketTopMargin 0;
 }
+
+.noRecomedDescription {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+    width: 100%;
+    height: 80px;
+    font-size: 16px;
+    text-align: center;
+    color: #ccc;
+}
