--- a/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
+++ b/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
@@ -79,3 +79,8 @@ $qrcodeWrapHeight: 160px;
         background-color: gray;
     }
 }
+.barcode {
+    font-size: 0;
+    vertical-align: top;
+    width: 100%;
+}
