--- a/src/containers/Tickets/component/Ticket/Ticket.scss
+++ b/src/containers/Tickets/component/Ticket/Ticket.scss
@@ -109,11 +109,16 @@ $qrcodeWrapHeight: 45px;
     height: $qrcodeWrapHeight;
 
     & > div {
-        background-color: gray;
         width: 25px;
         height: 25px;
         margin-left: 7.5px;
         overflow: hidden;
+
+        &>img {
+            font-size: 0;
+            vertical-align: top;
+            width: 100%;
+        }
     }
     & > span {
         display: inline-block;
