--- a/src/components/Elements/Element.scss
+++ b/src/components/Elements/Element.scss
@@ -33,16 +33,16 @@ $elementVerMargin: 14px;
         vertical-align: top;
     }
     & > div {
-        display: -webkit-box;
+        // display: -webkit-box;
         box-sizing: content-box;
-        max-height: 75px;
+        // max-height: 75px;
         padding: 5px 20px;
 
-        font-size: 14px;
-        line-height: 25px;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        // font-size: 14px;
+        // line-height: 25px;
+        // text-overflow: ellipsis;
+        // -webkit-line-clamp: 2;
+        // -webkit-box-orient: vertical;
 
         color: white;
         background-color: #2D343B;
