调整了购物车的逻辑

--- a/src/containers/Shoppingcart/component/Card/Card.scss
+++ b/src/containers/Shoppingcart/component/Card/Card.scss
@@ -34,6 +34,7 @@ $coverHeight: 80px;
     vertical-align: top;
     & > img {
         width: $coverHeight;
+        height: $coverHeight;
         vertical-align: top;
     }
 }
