调整了门票标题过长的问题

--- a/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
+++ b/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
@@ -45,7 +45,10 @@ $ticketContentMargin: 24px;
     }
 }
 .ticketTitle {
+    white-space: nowrap;
+    overflow: hidden;
     font-family: PingFangSC-Semibold;
+    text-overflow: ellipsis;
     font-size: 20px;
     color: black;
 }
