调整了我的门票页的情况

--- a/src/containers/Tickets/component/Ticket/Ticket.scss
+++ b/src/containers/Tickets/component/Ticket/Ticket.scss
@@ -40,12 +40,13 @@ $ticketHeight: 130px;
     padding: 12px;
     color: black;
 
-    & > a {
-        display: inline-block;
-        color: black;
-    }
-    & > a > span {
+    & > span {
         display: block;
+        overflow: hidden;
+
+        color: black;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 }
 
