--- a/src/containers/Tickets/component/Header/Header.scss
+++ b/src/containers/Tickets/component/Header/Header.scss
@@ -32,6 +32,12 @@ $avatarHeight: 60px;
     color: #143B6E;
 }
 
+.userBarode {
+    font-size: 0;
+    vertical-align: top;
+    width: 100%;
+}
+
 .vip {
     width: 56px;
     height: 22px;
