添加了个人页大门票的点以及大门票相关的内容

--- a/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
+++ b/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
@@ -229,3 +229,11 @@ $ticketCountPartHeight: 40px;
     font-size: 16px;
     color: black;
 }
+
+.doorTicketDescription {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    text-align: center;
+}
