调整了入园票的css

--- a/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
+++ b/src/containers/HotDetail/component/BuyTicketNow/BuyTicketNow.scss
@@ -231,7 +231,8 @@ $ticketCountPartHeight: 40px;
 }
 
 .doorTicketDescription {
-    position: relative;
+    position: absolute;
+    width: 100%;
     top: 50%;
     transform: translateY(-50%);
     font-size: 18px;
