--- a/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
+++ b/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
@@ -76,7 +76,7 @@ $qrcodeWrapHeight: 160px;
         width: $qrcodeWrapHeight;
         height: $qrcodeWrapHeight;
         transform: translate(-50%, -50%);
-        background-color: gray;
+        background-color: white;
     }
 }
 .barcode {
