--- a/src/containers/Tickets/container/Tickets.scss
+++ b/src/containers/Tickets/container/Tickets.scss
@@ -6,3 +6,11 @@ $ticketBorderBottom: 75px;
 .ticketWrap {
     padding: 0 20px;
 }
+
+$noTicketsMessageTopMargin: 60px;
+.noTicketsMessage {
+    margin-top: $noTicketsMessageTopMargin;
+    font-size: 16px;
+    text-align: center;
+    color: #9B9B9B;
+}
