调整了支付会重复的问题

--- a/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
+++ b/src/containers/Shoppingcart/container/CompleteBuyTicketInfo.scss
@@ -281,10 +281,15 @@ $toolbarHeight: 55px;
     bottom: 0px;
 
     height: $toolbarHeight;
-    text-align: center;
+    // text-align: center;
     line-height: $toolbarHeight;
     background-color: #2D343B;
 }
+
+.toolbarWrapper {
+    text-align: center;
+}
+
 .price {
     display: inline-block;
     font-size: 16px;
