--- a/src/containers/Download/container/Download.scss
+++ b/src/containers/Download/container/Download.scss
@@ -15,7 +15,8 @@
 }
 
 .fbparkDescription {
-    margin: 60px 0;
+    margin-top: 40px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 24px;
     line-height: 40px;
