调整了register.js的逻辑

--- a/src/containers/Login/component/ForgotPassword/ForgotPassword.scss
+++ b/src/containers/Login/component/ForgotPassword/ForgotPassword.scss
@@ -1,3 +1,10 @@
+// @Author: WangChao
+// @Date:   2017-06-23T16:18:04+08:00
+// @Email:  crazyitcoder9527@126.com
+// @Project: dreampark-web
+// @Last modified by:   WangChao
+// @Last modified time: 2017-09-02T10:58:50+08:00
+
 .forgotpassword {
     position: relative;
     margin: 0 5%;
@@ -18,7 +25,7 @@
         font-size: 28px;
     }
     & > span:last-child {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
 
