--- a/src/containers/Register/container/Register.scss
+++ b/src/containers/Register/container/Register.scss
@@ -1,9 +1,17 @@
+// @Author: WangChao
+// @Date:   2017-06-23T17:03:46+08:00
+// @Email:  crazyitcoder9527@126.com
+// @Project: dreampark-web
+// @Last modified by:   WangChao
+// @Last modified time: 2017-09-02T10:57:08+08:00
+
 .register {
 
 }
 
 .container {
     position: relative;
+    padding-top: 64px;
 }
 
 .nav {
