--- a/src/containers/Login/component/Launching/Launching.scss
+++ b/src/containers/Login/component/Launching/Launching.scss
@@ -1,3 +1,10 @@
+// @Author: WangChao
+// @Date:   2017-09-04T14:34:57+08:00
+// @Email:  crazyitcoder9527@126.com
+// @Project: dreampark-web
+// @Last modified by:   WangChao
+// @Last modified time: 2017-09-04T14:46:26+08:00
+
 .launching {
     position: relative;
     padding: 20px;
@@ -51,8 +58,8 @@ $logoHeight: 70px;
 
 .buttons {
     width: 100%;
-    &>div:last-child {
-        margin-top: 20px;
+    & > div {
+        margin: 20px 0;
     }
 }
 
