--- a/src/containers/Register/component/StepThree/StepThree.scss
+++ b/src/containers/Register/component/StepThree/StepThree.scss
@@ -1,3 +1,10 @@
+// @Author: WangChao
+// @Date:   2017-09-04T14:34:57+08:00
+// @Email:  crazyitcoder9527@126.com
+// @Project: dreampark-web
+// @Last modified by:   WangChao
+// @Last modified time: 2017-09-04T20:43:27+08:00
+
 .stepthree {
     margin: 0 5%;
 }
@@ -5,4 +12,8 @@
 .nextstep {
     float: right;
     width: 35%;
+}
+
+.confirm {
+    width: 100%;
 }
