--- a/src/containers/Tickets/component/Header/Header.scss
+++ b/src/containers/Tickets/component/Header/Header.scss
@@ -1,3 +1,10 @@
+// @Author: WangChao
+// @Date:   2017-09-04T14:34:57+08:00
+// @Email:  crazyitcoder9527@126.com
+// @Project: dreampark-web
+// @Last modified by:   WangChao
+// @Last modified time: 2017-09-05T20:27:35+08:00
+
 $headerHeight: 130px;
 .header {
     height: $headerHeight;
@@ -108,6 +115,15 @@ $bottomHeight: 40px;
     border-bottom: 1px dashed #9B9B9B;
 }
 
+.realnameAuthentication {
+    margin-bottom: 30px;
+    text-align: center;
+    & > span {
+        font-size: 24px;
+        color: #000000;
+    }
+}
+
 .userInfoDetails {
     display: inline-block;
     width: 100%;
@@ -156,10 +172,11 @@ $buyHelperHeight: 44px;
     display: block;
     width: 100%;
     height: $buyHelperHeight;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
     border-radius: $buyHelperHeight / 2;
 
-    font-size: 14px;
+    font-size: 18px;
     line-height: $buyHelperHeight;
     text-align: center;
     text-decoration: none;
@@ -173,5 +190,18 @@ $buyHelperHeight: 44px;
     &:visited {
         color: white;
         text-decoration: none;
+    }
+}
+
+.makeQRCode {
+    width: 100%;
+    text-align: center;
+
+    & > span {
+        display: inline-block;
+        margin-top: 25px;
+        font-size: 16px;
+        font-weight: bold;
+        color: black;
     }
 }
