--- a/src/containers/Tickets/component/Header/Header.scss
+++ b/src/containers/Tickets/component/Header/Header.scss
@@ -109,7 +109,7 @@ $bottomHeight: 40px;
 }
 
 .realnameAuthentication {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     text-align: center;
     & > span {
         font-size: 24px;
@@ -169,7 +169,7 @@ $buyHelperHeight: 44px;
     display: block;
     width: 100%;
     height: $buyHelperHeight;
-    margin-top: 10px;
+    // margin-top: 10px;
     margin-bottom: 15px;
     border-radius: $buyHelperHeight / 2;
 
