--- a/src/containers/Register/container/ToBeVip.scss
+++ b/src/containers/Register/container/ToBeVip.scss
@@ -92,7 +92,7 @@
 
 .vipRights {
     margin: 24px 0;
-    & > span {
+    & > a {
         font-size: 16px;
         color: #FFFFFF;
         vertical-align: middle;
