--- a/src/containers/Tickets/component/Ticket/Ticket.scss
+++ b/src/containers/Tickets/component/Ticket/Ticket.scss
@@ -42,6 +42,7 @@ $ticketHeight: 130px;
 
     & > span {
         display: block;
+        margin: 3px 0;
         overflow: hidden;
 
         color: black;
