--- a/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
+++ b/src/containers/Tickets/component/TicketDetail/TicketDetail.scss
@@ -2,6 +2,8 @@
 }
 
 .info {
+    padding: 25px 0;
+    padding-left: 10px;
     border-bottom: 1px dashed;
 }
 
@@ -46,7 +48,6 @@
     height: 25px;
     line-height: 25px;
     margin-top: 14px;
-    margin-bottom: 25px;
     font-family: PingFangSC-Regular;
     & > span {
 
@@ -86,5 +87,5 @@ $qrcodeWrapHeight: 160px;
 }
 
 .customQRCode {
-    margin-top: 15px;   
+    margin-top: 30px;
 }
