--- a/src/containers/Tickets/component/Header/Header.scss
+++ b/src/containers/Tickets/component/Header/Header.scss
@@ -193,17 +193,22 @@ $buyHelperHeight: 44px;
 .makeQRCode {
     width: 100%;
     text-align: center;
+}
 
-    & > span {
-        display: inline-block;
-        width: 100%;
-        margin-top: 25px;
-        font-size: 16px;
-        font-weight: bold;
-        color: black;
+.qrcodeDescription {
+    display: inline-block;
+    width: 100%;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+}
 
-        @media(max-width: 320px) {
-            margin-top: 10px;
-        }
-    }
+.randomString {
+    display: inline-block;
+    width: 100%;
+    margin-top: 3px;
+    font-size: 16px;
+    font-weight: bold;
+    color: black;
 }
