调整了登录注册页。

--- a/src/containers/Register/container/Register.scss
+++ b/src/containers/Register/container/Register.scss
@@ -2,9 +2,10 @@
 
 }
 
+$registerContainerPaddingTop: 10px;
 .container {
     position: relative;
-    padding-top: 44px;
+    padding-top: $registerContainerPaddingTop;
 }
 
 .nav {
