--- a/src/containers/Tickets/component/Ticket/Ticket.scss
+++ b/src/containers/Tickets/component/Ticket/Ticket.scss
@@ -62,6 +62,17 @@ $ticketHeight: 130px;
     color: #9B9B9B;
 }
 
+.titleOnly {
+    line-height: 100px !important;
+    @media screen and (max-width: 370px) {
+        line-height: 90px !important;
+    }
+}
+
+.itemVisibility {
+    display: none !important;
+}
+
 .rest {
     position: absolute;
     bottom: 6px;
